iframe z-index problem solved

--- a/css/basic.css
+++ b/css/basic.css
@@ -56,6 +56,7 @@ a {
     top: 0.2em;
     background-color: #111;
     box-shadow: 0 0 20px 20px #111;
+    z-index: 1;
 }
 
 .profile_section h3 {
@@ -71,11 +72,6 @@ a {
 
 .education p {
     padding-left: 10px;
-}
-
-.education iframe {
-    padding-top: 2em;
-    padding-left: 2em;
 }
 
 .name {
@@ -148,6 +144,8 @@ a {
 }
 
 .timeline iframe {
+    padding-top: 0.2em;
+    padding-bottom: 0.1em;
     width: 100%;
     height: 27em;
 }
